Fix several issues that we're having while using the library
Serialize all the attributes, all the time.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "strict": true,
     "sourceMap": true,
     "declaration": true,
-    "inlineSourceMap": false
+    "inlineSourceMap": false,
+    "skipLibCheck": true
   },
   "formatCodeOptions": {
     "indentSize": 2,
