Remove more TypeScript types that are not compatible it seems

--- a/package.json
+++ b/package.json
@@ -63,8 +63,6 @@
     "@babel/plugin-transform-modules-commonjs": "7.2.0",
     "@babel/preset-env": "7.3.1",
     "@babel/register": "7.0.0",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/chai-things": "^0.0.32",
     "@types/fetch-mock": "5.12.2",
     "@types/inflected": "1.1.29",
     "@types/lodash": "4.14.92",
@@ -74,7 +72,7 @@
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.58",
     "@types/winston": "2.3.7",
-    "chai": "^4.1.2",
+    "chai": "4.1.1",
     "chai-things": "^0.2.0",
     "es6-promise": "4.2.4",
     "eslint": "5.12.0",
